test/force-app/main/default/objects/Merchant_Schedule__c/Merchant_Schedule__c.object-meta.xml
<CustomObject>
    <label>Merchant Schedule</label>
    <nameField>
        <displayFormat>MS{0000}</displayFormat>
        <label>Merchant Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>