test/force-app/main/default/objects/Merchant_Schedule__c/fields/Financial_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Analysis</label>
    <referenceTo>PortfolioFinancialAnalysis__c</referenceTo>
    <relationshipLabel>Merchant Schedules</relationshipLabel>
    <relationshipName>Merchant_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>