test/force-app/main/default/objects/Merchant_Schedule__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Date</type>
</CustomField>