test/force-app/main/default/objects/Merchant_Schedule__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>